Migracion de recursos a carpeta assets